[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Debugging Sparrow <dbgsprw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-benchmark = "^4.0.0"
scavenger-agent-python = {path = "../../../"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
